✨ Read The Subtle Art of Not Giving a Fuck

--- a/2019.md
+++ b/2019.md
@@ -1,3 +1,7 @@
 # Blogposts
 
 * [Everything I know about freelancing](https://andyadams.org/everything-i-know-about-freelancing/)
+
+# Books
+
+* [The Subtle Art of Not Giving a Fuck](https://partner.bol.com/click/click?p=1&s=48262&t=p&pid=9200000063067905&f=PDL)
